<resources>
    <string name="str_booked">booked</string>
    <string name="str_book_dialog">This time has already booked another epg</string>
    <string name="time_out">time out</string>
<string  name="str_join_tiaoshi">Enter Debug mode</string>
    <string name="str_factory_clear_data">Cleared play data!</string>
<string name="str_factory_clear_channelist">Cleared channel data!</string>
    <string name="str_zhn_favset_toast_full">Quick-launch list is full.</string>
    <string name="str_zhn_DTVtitle">Digital TV</string>
    <string name="str_zhn_app_name">Digital TV</string>
    <string name="str_zhn_programlist">tv list</string>
    <string name="str_zhn_epg">epg</string>
    <string name="str_zhn_popskiptext">Skip Channels</string>
    <string name="str_zhn_programsearch">Search</string>
    <string name="str_zhn_DTVexit">exit</string>
    <string name="str_zhn_sacnmode">search mode</string>
    <string name="str_zhn_scanfrequence">frequency</string>
    <string name="str_zhn_symbol">symbol</string>
    <string name="str_zhn_modulation">Modulation:</string>
    <string name="str_zhn_strength">Strength:</string>
    <string name="str_zhn_quality">Quality:</string>
    <string name="str_zhn_khz">KHz</string>
    <string name="str_zhn_mhz">MHz</string>
    <string name="str_zhn_symbletext">Symbol:</string>
    <string name="str_zhn_startscan">start</string>
    <string name="str_zhn_pronum">Num</string>
    <string name="str_zhn_proname">Name</string>
    <string name="str_zhn_islock">Islock</string>
    <string name="str_zhn_teststring"></string>
    <string name="str_zhn_allfresearch">all frequency search</string>
    <string name="str_zhn_autoscan">Auto Search</string>
    <string name="str_zhn_manualscan">Manual Search</string>
    <string name="str_zhn_cityscan">Spectrum Search</string>
    <string name="str_zhn_8QAM">8QAM</string>
    <string name="str_zhn_16QAM">16QAM</string>
    <string name="str_zhn_32QAM">32QAM</string>
    <string name="str_zhn_64QAM">64QAM</string>
    <string name="str_zhn_128QAM">128QAM</string>
    <string name="str_zhn_256QAM">256QAM</string>
    <string name="str_zhn_QAM">QAM</string>
    <string name="str_zhn_symbolrate">Kbps</string>
    <string name="str_zhn_tv">TV:</string>
    <string name="str_zhn_radio">RADIO:</string>
    <string name="str_zhn_percent">00%</string>
    <string name="str_zhn_scaning">searching</string>
    <string name="str_zhn_information">information</string>
    <string name="str_zhn_diaissearch">no program,auto search?</string>
    <string name="str_zhn_updatesearch">节目有更新,是否自动搜索?</string>
    <string name="str_zhn_yes">Yes</string>
    <string name="str_zhn_no">No</string>
    <string name="str_zhn_noprogram">No Program\nScan first!</string>
    <string name="str_zhn_isexitdtv">exit digital tv ? </string>
    <string name="str_zhn_saving">save data...</string>
    <string name="str_zhn_cainfor">CA information</string>
    <string name="str_zhn_usrset">Setting</string>
    <string name="str_zhn_banner_no_event">No Information </string>
    <string name="str_zhn_banner_next">next: </string>
    <string name="str_zhn_usrset_reset">Reset</string>
    <string name="str_zhn_usrset_version">Version </string>
    <string name="str_zhn_usrset_author">Author </string>
    <string name="str_zhn_usrset_author_changhong">ChangHong </string>
    <string name="str_zhn_usrset_softversion">Software Version</string>
    <string name="str_zhn_usrset_softversion_num">V1.1</string>
    <string name="str_zhn_usrset_hardversion">Hardware</string>
    <string name="str_zhn_usrset_hardversion_num">V1.0</string>
    <string name="str_zhn_usrset_version_update">Date</string>
    <string name="str_zhn_usrset_version_update_time">2011.08.29 11:35</string>
    <string name="str_zhn_usrset_resetting">Resetting..</string>
    <string name="str_zhn_scan_sort">Sorting...</string>
    <string name="str_zhn_scan_init">Searching..</string>
    <string name="str_epg">EPG</string>
    <string name="str_epg_chlist">Program List</string>
    <string name="str_epg_eventlist">Event Information</string>
    <string name="str_epg_digital_invalid">Invalid Number</string>
    <string name="str_zhn_novalidprogram">No Tv</string>
    <string name="str_zhn_novalidradio">no radio</string>
    <string name="str_zhn_ca_main_title">CA menu</string>
    <string name="str_zhn_usrset_usrset">set</string>
    <string name="str_zhn_usrset_switchmode">switch mode</string>
    <string name="str_zhn_usrset_bannertime">banner time</string>
    <string name="str_zhn_usrset_switchmode_ok">confirm</string>
    <string name="str_zhn_usrset_switchmode_follow">follow</string>
    <string name="str_zhn_usrset_bannertime_three">3 seconds</string>
    <string name="str_zhn_usrset_bannertime_four">4 seconds</string>
    <string name="str_zhn_usrset_bannertime_five">5 seconds</string>
    <string name="str_zhn_usrset_bannertime_six">6 seconds</string>
    <string name="str_zhn_usrset_bannertime_seven">7 seconds</string>
    <string name="str_zhn_usrset_bannertime_forever">8 seconds</string>
    <string name="str_zhn_usrset_resetwaring">warning</string>
    <string name="str_zhn_usrset_reset_info">  factory reset?</string>
    <string name="str_zhn_getting_epg1">searching></string>
    <string name="str_zhn_getting_epg2">searching >></string>
    <string name="str_zhn_getting_epg3">searching >>></string>
    <string name="str_zhn_usrset_newchannelmode">switch channel mode</string>
    <string name="str_zhn_usrset_newchannelmode_black">black</string>
    <string name="str_zhn_usrset_newchannelmode_freeze">freeze</string>
    <string name="str_zhn_banner_nextprogram">next</string>
    <string name="str_zhn_switchfailed">failed,check is tv  exist.</string>
    <string name="str_zhn_noproinformation">no program </string>
    <string name="str_zhn_usrset_noepg">no information</string>
    <string name="str_zhn_prosearch_mainfre">Freq: </string>
    <string name="str_zhn_prosearch_startfre">Start Freq:</string>
    <string name="str_zhn_prosearch_endfre">End Freq:</string>
    <string name="str_zhn_prosearch_mainfreset">frequency set </string>
    <string name="str_zhn_usrset_factory_yes">yes</string>
    <string name="str_zhn_usrset_factory_no">no</string>
    <string name="str_zhn_usrset_seconds">S </string>
    <string name="str_zhn_epg_cannotdel_program">can not delete the playing program!</string>
    <string name="str_zhn_epg_confirm_delprogram">confirm delete ? </string>
    <string name="str_zhn_nosignal">no signal</string>
    <string name="str_zhn_city">city</string>
    <string name="str_zhn_city_mianyang">mianyang</string>
    <string name="str_zhn_city_changhong">changhong</string>
    <string name="str_zhn_city_beijing">beijing</string>
    <string name="str_zhn_city_tianjin">tianjin</string>
    <string name="str_zhn_city_shanghai">shanghai</string>
    <string name="str_zhn_city_chongqing">chongqing</string>
    <string name="str_zhn_city_chengdu">chengdu</string>
    <string name="str_zhn_city_guangzhou">guangzhou</string>
    <string name="str_zhn_city_nanjing">nanjing</string>
    <string name="str_zhn_cityscan_help">green  add city,yellow add frequency,red delete</string>
    <string name="str_zhn_cityscanfrequence">KHz</string>
    <string name="str_zhn_citysymbol">Msps</string>
    <string name="str_zhn_citymodulation">QAM</string>
    <string name="str_zhn_cityaddinfomation">add city</string>
    <string name="str_zhn_cityaddfreqinfomation">add frequency</string>
    <string name="str_zhn_cityaddconfirm">confirm</string>
    <string name="str_zhn_cityexist">the city is exist</string>
    <string name="str_zhn_cityfreqexist">the frequency is exist.</string>
    <string name="str_zhn_citydelete">confirm delete?</string>
    <string name="str_zhn_cityfreqdelete">confirm delete?</string>
    <string name="str_zhn_prosearch_with_t">| Search</string>
    <string name="str_zhn_autoscan_with_t">| Auto Search</string>
    <string name="str_zhn_manualscan_with_t">| Manual Search</string>
    <string name="str_zhn_listscan_with_t">| List Search</string>
    <string name="str_zhn_usrset_with_t">| Setting</string>
    <string name="str_zhn_count_0">0</string>
        <string name="str_zhn_ca_with_t">| CA</string>
    <string name="str_zhn_ca_card_number">Card Number</string>
    <string name="str_zhn_ca_card_version">Card Version</string>
     <string name="str_zhn_ca_info">CAInfo</string>
    <string name="str_zhn_ca_work_time">Work Time</string>
    <string name="str_zhn_ca_rate">Card Rate</string>
    <string name="str_zhn_ca_pincode_change">PinCode</string>
    <string name="str_zhn_ca_modify_notice">PinCode Change</string>
    <string name="str_zhn_ca_email">Email</string>
    <string name="str_zhn_ca_email_list">Email List</string>
    <string name="str_zhn_input_rate">Set Rate</string>
    <string name="str_zhn_ca_code">Passwd</string>
    <string name="str_zhn_input_worktime">Set Work Time</string>
    <string name="str_zhn_start_time">Start Time</string>
    <string name="str_zhn_end_time">End Time</string>
    <string name="str_zhn_time_hour">Hour</string>
    <string name="str_zhn_time_min">Min</string>
    <string name="str_zhn_ca_pincode_old">Old Code</string>
    <string name="str_zhn_ca_pincode_new">New Code</string>
    <string name="str_zhn_pvr_rec">record</string>
    <string name="str_zhn_share">share</string>
    <string name="str_zhn_rec_ask">start record </string>
    <string name="str_zhn_rec_stop">stop record?</string>
    <string name="str_zhn_recording">recording</string>
    <string name="str_zhn_rec_stopinfo">stop record with back</string>
    <string name="str_zhn_rec_timename">record time</string>
    <string name="str_zhn_rec_already">the program is recorded</string>
    <string name="str_zhn_city_choice">city</string>
    <string name="selectpartition">path：</string>
    <string name="recordduration">duration：</string>
    <string name="hour">hour</string>
    <string name="record_duration_noLimit">no limit</string>
    <string name="str_zhn_ci_init_begin">initialing CI</string>
    <string name="str_zhn_count_235000">331000</string>
    <string name="str_zhn_count_6875">6875</string>
    <string name="str_zhn_count_favorite">favorite</string>
    <string name="str_zhn_count_ci_initializing">CI in,initialing</string>
    <string name="str_zhn_count_ci_initialize_succeed">CI initial suceed</string>
    <string name="str_zhn_count_ci_initialize_failed">CI initial failed</string>
    <string name="str_zhn_count_ci_initialize_unmount">CI out</string>
    <string name="str_zhn_count_ci_program_locked">locked program</string>
    <string name="str_zhn_root_mianyangservice">为您服务</string>
    <string name="str_zhn_program_update">Service is updated, scan again!</string>
    <string name="downloadtitle">Downloading,please wait...</string>
    <string name="title2">System is Updating,DO NOT power off</string>
    <string name="downloadstatus">Status:</string>
    <string name="downDSI">Parsing DSI...</string>
   <string name="str_epg_playing_info">Playing information</string>
   <string name="str_epg_playing_channelname">Playing channel current</string>
   <string name="str_epg_playing_enventname">Playing program current</string>
    <string name="app_name">Digital TV</string>
    <string name="maohao">：</string>
    <string name="title_cainfo_class">Rate:</string>
    <string name="title_code">Password:</string>
    <string name="title_worktime_start">start time:</string>
    <string name="title_worktime_end">end time:</string>
    <string name="notice_inputrate">Input a number between 4 and 18</string>
    <string name="str_cleardata">Clear the play record</string>
    <string name="str_clearchannels">Clear all channels</string>
    <string name="channer_inforItem">频道信息</string>
    <string name="CA_inforItem">CA信息</string>
    <string name="program_managerItem">节目管理</string>
    <string name="program_searchItem">节目搜索</string>
</resources>