<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_dtv_prosea"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_back_item" >

    <FrameLayout
        android:layout_width="1000dip"
        android:layout_height="525dip"
        android:layout_gravity="top|left"
        android:layout_marginLeft="140dip"
        android:layout_marginTop="70dip" >

        <ImageView
            android:layout_width="172dp"
            android:layout_height="128dp"
            android:layout_gravity="top|left"
            android:layout_marginTop="30dp"
            android:background="@drawable/setting"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="172dp"
            android:layout_height="48dp"
            android:layout_gravity="top|left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="120dp"
            android:text="@string/str_zhn_DTVtitle"
            android:textSize="@dimen/FONT_SIZE_NORMAL" />

        
    </FrameLayout>

    <FrameLayout
        android:layout_width="540dip"
        android:layout_height="65dip"
        android:layout_gravity="top|left"
        android:layout_marginLeft="480dip"
        android:layout_marginTop="250dip" >

       <Button
            android:id="@+id/cleardata"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top|left"
            android:background="@drawable/btn_dtv_sub_selector"
            android:gravity="center"
            android:text="@string/str_cleardata"
            android:textColor="@color/gray_white"
            android:textSize="@dimen/FONT_SIZE_SMALL" >
        </Button>


    </FrameLayout>

    <FrameLayout
        android:layout_width="540dip"
        android:layout_height="65dip"
        android:layout_gravity="top|left"
        android:layout_marginLeft="480dip"
        android:layout_marginTop="350dip" >
       <Button
            android:id="@+id/clearchannels"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top|left"
            android:background="@drawable/btn_dtv_sub_selector"
            android:gravity="center"
            android:text="@string/str_clearchannels"
            android:textColor="@color/gray_white"
            android:textSize="@dimen/FONT_SIZE_SMALL" >
        </Button>
    </FrameLayout>

</FrameLayout>
