<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <SurfaceView
        android:id="@+id/surfaceView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible">
    </SurfaceView>
  
    <LinearLayout
        android:layout_width="1100dip"
        android:layout_height="650dip"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_vertical|center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/epg119"
        android:orientation="vertical" >

        <Button
            android:id="@+id/program_searchItem"
            android:layout_width="650dip"
            android:layout_height="70dip"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector"
            android:gravity="center"
            android:text="@string/program_searchItem"
            android:textColor="@color/white"
            android:textSize="@dimen/FONT_SIZE_BIG" />

        <Button
            android:id="@+id/program_managerItem"
            android:layout_width="650dip"
            android:layout_height="70dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dip"
            android:background="@drawable/selector"
            android:gravity="center"
            android:text="@string/program_managerItem"
            android:textColor="@color/white"
            android:textSize="@dimen/FONT_SIZE_BIG" />

        <Button
            android:id="@+id/CA_inforItem"
            android:layout_width="650dip"
            android:layout_height="70dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dip"
            android:background="@drawable/selector"
            android:gravity="center"
            android:text="@string/CA_inforItem"
            android:textColor="@color/white"
            android:textSize="@dimen/FONT_SIZE_BIG" />

        <Button
            android:id="@+id/channer_inforItem"
            android:layout_width="650dip"
            android:layout_height="70dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dip"
            android:background="@drawable/selector"
            android:gravity="center"
            android:text="@string/channer_inforItem"
            android:textColor="@color/white"
            android:textSize="@dimen/FONT_SIZE_BIG" />
    </LinearLayout>

</RelativeLayout>