<?xml version="1.0" encoding="utf-8"?>
<FrameLayout     
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/linout_caset_id"
    android:layout_width="1060dip"
 	android:layout_height="599dip"
 	android:orientation="horizontal"
 	android:background="@drawable/back" 	
 	android:layout_gravity="center">
 	<LinearLayout 
 	    android:orientation="vertical"
 	    android:layout_height="fill_parent"
 	    android:layout_width="fill_parent"
 	    >
 	    <TextView 
 	        android:layout_marginTop="30dip"
 	        android:text="观看级别设置"
 	        android:textSize="28sp"
 	        android:textColor="@color/white"
 	        android:gravity="center"
 	        android:layout_width="fill_parent"
 	        android:layout_height="40dip"
 	        android:background="@color/transparent"
 	        />
 	<RelativeLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_gravity="center" >     
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_cainfo_class"
        android:textColor="@color/white"
        android:textSize="@dimen/FONT_SIZE_SMALL"
        android:layout_marginTop="110dip"
        android:layout_marginLeft="0dip"/>
    <EditText
        android:id="@+id/class_input_rate" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dip"
        android:layout_marginLeft="120dp"
        android:singleLine="true"
        android:maxWidth="280dip"
        android:gravity="center"
        android:hint="@string/notice_inputrate"
        android:textColorHint="#ff000000"
        android:inputType="number"
        android:background="@drawable/item_class_selector"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_code"
        android:textColor="@color/white"
        android:textSize="@dimen/FONT_SIZE_SMALL"
        android:layout_marginTop="180dip"
        android:layout_marginLeft="0dip"/>
    <EditText 
        android:id="@+id/class_input_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:maxWidth="280dip"
        android:layout_marginTop="180dip"
        android:layout_marginLeft="120dip"
        android:inputType="textPassword"
        android:gravity="center"
        android:background="@drawable/item_class_selector"/>

    <Button 
        android:id="@+id/button_class_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dip"
        android:layout_marginLeft="200dip"
        android:background="@drawable/button_sure_selector"/>
</RelativeLayout>
 	</LinearLayout>
 </FrameLayout>


