<?xml version="1.0" encoding="utf-8"?>
<FrameLayout     
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/linout_caset_id"
    android:layout_width="1060dip"
 	android:layout_height="599dip"
 	android:orientation="horizontal"
 	android:background="@drawable/back" 	
 	android:layout_gravity="center">
 	<LinearLayout 
 	    android:orientation="vertical"
 	    android:layout_height="fill_parent"
 	    android:layout_width="fill_parent"
 	    >
 	    <TextView 
 	        android:layout_marginTop="30dip"
 	        android:text="修改工作时段"
 	        android:textSize="28sp"
 	        android:textColor="@color/white"
 	        android:gravity="center"
 	        android:layout_width="fill_parent"
 	        android:layout_height="40dip"
 	        android:background="@color/transparent"
 	        />
 	<RelativeLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >
    <!-- start time -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_worktime_start"
        android:textColor="@color/white"
        android:textSize="@dimen/FONT_SIZE_SMALL"
        android:layout_marginTop="90dip"
        android:layout_marginLeft="0dip"/>    
    <EditText 
        android:id="@+id/worktime_input_starthour"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dip"
        android:layout_marginLeft="120dip"
        android:gravity="center"
        android:inputType="number"
        android:background="@drawable/item_worktime_selector"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maohao"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="@dimen/FONT_SIZE_SMALL"
        android:layout_marginTop="90dip"
        android:layout_marginLeft="225dip"/>
    <EditText 
        android:id="@+id/worktime_input_startmin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dip"
        android:layout_marginLeft="255dip"
        android:gravity="center"
        android:inputType="number"
        android:background="@drawable/item_worktime_selector"/>
    <!-- end time -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_worktime_end"
        android:textColor="@color/white"
        android:textSize="@dimen/FONT_SIZE_SMALL"
        android:layout_marginTop="130dip"
        android:layout_marginLeft="0dip"/>   
    <EditText 
        android:id="@+id/worktime_input_endhour"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dip"
        android:layout_marginLeft="120dip"
        android:gravity="center"
        android:inputType="number"
        android:background="@drawable/item_worktime_selector"/>
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maohao"
        android:textColor="@color/white"
        android:textSize="@dimen/FONT_SIZE_SMALL"
        android:layout_marginTop="130dip"
        android:layout_marginLeft="225dip"/>
    <EditText 
        android:id="@+id/worktime_input_endmin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dip"
        android:layout_marginLeft="255dip"
        android:gravity="center"
        android:inputType="number"
        android:background="@drawable/item_worktime_selector"/>
    <!-- password -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_code"
        android:textColor="@color/white"
        android:textSize="@dimen/FONT_SIZE_SMALL"
        android:layout_marginTop="170dip"
        android:layout_marginLeft="0dip"/>
    <EditText 
        android:id="@+id/worktime_input_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dip"
        android:layout_marginLeft="120dip"
        android:inputType="textPassword"
        android:gravity="center"
        android:background="@drawable/item_pinset_selector"/>

    <Button 
        android:id="@+id/button_worktime_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="222dip"
        android:layout_marginLeft="190dip"
        android:background="@drawable/button_sure_selector"/>
</RelativeLayout>
 	</LinearLayout>
 </FrameLayout>



